
syntax = "proto3";

option go_package = "./webservice/protos";

service Tutorial {
  rpc CreateUser (UserRequest) returns (User) {}
  rpc Greet (GreetRequest) returns (GreetResponse) {}
}

message UserRequest {
  string name = 1;
}

message User {
  int64 id = 1;
  string name = 2;
}

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string message = 1;
}